# dva502_master_thesis

./: 0819_drone_1_100m.xlsx  0819_drone_1_75m.xlsx  0819_drone_2_125m.xlsx  0819_drone_2_25m.xlsx  README.md  drone_com_specs  terminal_output  terminal_output_2_0815_1630
Data 0819/Raw data/Drone 1/: terminal_output_drone_1_0819_125m.txt  terminal_output_drone_1_0819_175m.txt  terminal_output_drone_1_0819_25m.txt  terminal_output_drone_1_0819_50m.txt  terminal_output_drone_1_0819_75m.txt
Data 0819/Raw data/Drone 2/: terminal_output_drone_2_0819_125m.txt  terminal_output_drone_2_0819_150m.txt  terminal_output_drone_2_0819_175m.txt  terminal_output_drone_2_0819_225m.txt  terminal_output_drone_2_0819_25m.txt  terminal_output_drone_2_0819_50m.txt  (+1 more)
Data 0819/Sorted data/: 0819_drone_1_100m.xlsx  0819_drone_1_125m.xlsx  0819_drone_1_150m.xlsx  0819_drone_1_175m.xlsx  0819_drone_1_200m.xlsx  0819_drone_1_225m.xlsx  0819_drone_1_25m.xlsx  0819_drone_1_50m.xlsx  0819_drone_1_75m.xlsx  0819_drone_2_100m.xlsx  0819_drone_2_125m.xlsx  0819_drone_2_150m.xlsx  0819_drone_2_175m.xlsx  0819_drone_2_200m.xlsx  0819_drone_2_225m.xlsx  0819_drone_2_50m.xlsx  0819_drone_2_75m.xlsx
Workspace/install/: local_setup.sh  setup.sh
Workspace/log/: latest_build
Workspace/src/: CheatSheet  adhoc_drone_controller.py  adhoc_launch.py  f.py  integrated_ros.py  new_adhoc.py  no_ros.py  no_ros_adhoc.py  run_commands
Workspace/src/custom_drone_interfaces/: broadcast_functionality.py  package.xml  termimal_output_drone_1_0819_100m  termimal_output_drone_1_0819_225m  terminal_output_0818_1127
Workspace/src/custom_drone_interfaces/action/: MissionExecutor.action  Tracker.action
Workspace/src/custom_drone_interfaces/msg/: AgentsList.msg  MissionGoal.msg  StatusDataCollection.msg  TaskSpecification.msg  Waypoint.msg  drone_message.msg
workspace/install/: local_setup.sh  setup.sh
workspace/log/: latest_build
workspace/src/: CheatSheet  program_description
workspace/src/drone_start/: setup.cfg
(+268 files in other folders)
