[metadata]
name = drone_start
version = 0.0.0
description = Package to start all the drone nodes
#long_description = file: README.md  # Optional, if you have a README file
#long_description_content_type = text/markdown  # Optional, if README.md is used
author = Lennie Carlen Eriksson
author_email = lennie.carlen.eriksson@mdu.se
maintainer = Lennie Carlen Eriksson
maintainer_email = lennie.carlen.eriksson@mdu.se
license = TODO: License declaration
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License  # Adjust based on your actual license
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    setuptools
zip_safe = True
include_package_data = True  # Required for including data files like package.xml

[options.packages.find]
exclude =
    test

[options.package_data]
* =
    package.xml

[options.data_files]
share/drone_start =
    package.xml
share/drone_start/launch =
    launch/*.launch.py

[options.entry_points]
console_scripts =
    mission_control = mw_package.mission_control:main

[options.extras_require]
testing =
    pytest